<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuizFragment">

    <TextView
        android:id="@+id/tv_create_quiz_here"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="24dp"
        android:text="@string/create_quiz_here"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_create_quiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_quiz_here">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_start_quiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_create_quiz">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#1E88E5"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_start_quiz" />
</androidx.constraintlayout.widget.ConstraintLayout>